--- a/book_library/index.html
+++ b/book_library/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Book Library</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div id="container">
-        <h2>yo!</h2>
+    <header>
+        <h1>Book Library</h1>
+    </header>
 
+    <div class="container">
+        <div id="book-list">
+            <!-- Display book details here -->
+        </div>
+
+        <div id="book-details">
+            <!-- Display book details, including title, author, genre, cover image, and reading status here -->
+        </div>
     </div>
+
+    <footer>
+        <button id="add-book-button">Add Book</button>
+    </footer>
 
     <script src="app.js"></script>
 </body>
